[package]
name = "bevy_ldtk_scene"
version = "0.1.0"
edition = "2021"

[dependencies]
foldhash = "0.1.3"
ldtk2 = "0.8.0"

[dependencies.image]
version = "0.25.5"
default-features = false
features = ["rayon", "jpeg", "png"]

[dependencies.bevy]
version = "0.15.0"
# default-features = false
# features = ["bevy_scene", "bevy_sprite", "bevy_asset", "bevy_image"]
