[package]
name = "bevy_ldtk_scene"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { version = "0.16", default-features = false, features = [
    "std",
    "bevy_asset",
    "bevy_sprite",
    "bevy_log",
    "bevy_log",
    "serialize",
] }
foldhash = "0.1.3"
ldtk2 = "0.8.0"
serde = { version = "1", features = ["derive"] }
ron = "0.8"
convert_case = "0.6"
syn = { version = "2.0", default-features = false, features = [
    "full",
    "parsing",
] }
walkdir = "2.5"
quote = { version = "1.0", default-features = false }
prettyplease = { version = "0.2", default-features = false }
proc-macro2 = { version = "1.0", default-features = false }
thiserror = "2.0"
typetag = "0.2"
rand = "0.8"
variadics_please = "1.1.0"

[dependencies.image]
version = "0.25.5"
default-features = false
features = ["rayon", "jpeg", "png"]
